# CMakeTest

./: .gitignore
test1/: CMakeLists.txt
test1/src/: main.cpp
test2/: CMakeLists.txt
test2/lib/: hello.cpp
test3/: CMakeLists.txt
test3/src/: main.cpp
test4/: CMakeLists.txt
test4/cmake/: FindHELLO.cmake
